changed page content

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -21,17 +21,17 @@
 <body style="overflow: auto">
 
 <!-- navbar start  -->
-<div class="nav-fixed default_nav-bar">
-  <div class="container">
-    <nav class="heder-nav">
+<div class="nav-fixed">
+  <div class="nav-bar_container">
+    <nav class="header-nav">
 
       <a href="index.html?reload=false" class="navbar-brand">
-        <img src="./img/logo_green.svg" alt="Logo">
+        <img src="./img/logo_green.svg" alt="logo">
       </a>
 
       <ul class="nav-list media_hide">
-        <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home </a><span class="underline_link"></span></li>
-        <li class="nav-link-item active nav-link-dropdown">
+        <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span class="underline_link"></span></li>
+        <li class="nav-link-item nav-link-dropdown active">
           <a href="javascript:void(0)" class="nav-link">How We Are</a>
           <ul class="dropdown_links">
             <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">About Us</a></li>
@@ -39,11 +39,11 @@
           </ul>
           <span class="underline_link"></span>
         </li>
-        <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us </a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="project.html" class="nav-link">Project </a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How we work</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link">How we work</a><span class="underline_link"></span></li>
-
+        <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
+        <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -51,7 +51,7 @@
         <span class="small_line"></span>
       </div>
     </nav>
-    <div class="min_menu_block d-none">
+    <div class="min_menu_block ">
       <span class="close_menu"><i class="fas fa-times"></i></span>
     </div>
   </div>
@@ -59,14 +59,17 @@
 <!-- navbar end  -->
 
 <div class="about_us_main_content">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-lg-6 col-12 text-center order-lg-1 order-4">
-        <img src="./img/team1.svg" alt="Img">
-      </div>
-      <div class="col-lg-6 col-12 order-lg-2 order-3 mb-lg-0 mb-5">
-        <div class="team_content">
-          <p>
+  <div class="header_block">
+    <img src="./img/5.jpg" alt="Photo">
+  </div>
+  <div class="about_block">
+    <div class="block_content">
+      <div class="row">
+        <div class="col-lg-6 col-12">
+          <img class='articel_img' src="./img/article_photo.svg" alt="img">
+        </div>
+        <div class="col-lg-6 col-12">
+          <p class="team_content">
             <span class="company">Brain Fors</span> Company was founded in 2016, in Gyumri, the second largest city of
             Armenia. When the
             company was founded, there were two main goals: base the company in Gyumri, thus enabling local talented
@@ -76,122 +79,174 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-6 col-12 mb-lg-0 mb-5">
-        <div class="team_content">
-          <p>
-            During those years Brain Fors team has been and continues growing, being supplemented by new professionals
-            that share the same vision with the company. Today, we are a rooted technology-intensive company that is proud
-            to deliver a comprehensive suite of solutions comprising of web consultancy, on/off site services, custom
-            software and web development, software and web application testing.
+  </div>
 
-          </p>
+  <div class="article_block">
+    <div class="articel_main">
+      <div class="row">
+        <div class="col-md-6 col-12">
+          <img src="./img/article_photo.svg" alt="img">
         </div>
-      </div>
-      <div class="col-lg-6 col-12  text-center">
-        <img src="./img/team2.svg" alt="Img">
+        <div class="col-md-6 col-12">
+          <div class="article_content">
+            <h4 class="article_title">Why we</h4>
+            <p class="article_text">
+              We work highlighting Your need and wishes and sharing Your vision.
+              In each case, our development team put efforts to satisfy You fitting in time.
+              We are responsible in any work we do and very attentive to smalest details.
+              We value Your time and try to make the highest quality work done in the shortest period of time.
+            </p>
+          </div>
 
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6 col-12  text-center order-lg-1 order-4">
-        <img src="./img/team3.svg" alt="Img">
-
-      </div>
-      <div class="col-lg-6 col-12 order-lg-2 order-3">
-        <div class="team_content mb-lg-0 mb-5">
-          <p>
-            We work highlighting Your need and wishes and sharing Your vision. In each case, our development team put
-            efforts to satisfy You fitting in time. We are responsible in any work we do and very attentive to smalest
-            details. We value Your time and try to make the highest quality work done in the shortest period of time.
-          </p>
         </div>
       </div>
     </div>
   </div>
 
-</div>
-<footer class="footer">
-  <div class="container-fluid text-left">
-    <div class="row mb-3">
-      <div class="col-4">
-        <div class="footer_item_main item1">
-          <h4 class="item_title">CONTACT INFO</h4>
-          <div class="footer_address_block footer_colum">
-            <span class="icon_colum"><img src="./img/addressFlag.svg" alt=""></span>
-            <div class="address_content colum_content">
-              <p class="address_title">ADDRESS</p>
-              <span class="full_address">123 Street Name, City, England</span>
-            </div>
-          </div>
-
-          <div class="footer_phone_block footer_colum">
-            <span class="icon_colum"><i class="fas fa-phone-alt"></i></span>
-            <div class="phone_content colum_content">
-              <p class="phone_title">PHONE</p>
-              <span class="full_number">Toll Free (123) 456-7890</span>
-            </div>
-          </div>
-
-          <div class="footer_email_block footer_colum">
-            <span class="icon_colum"><i class="far fa-envelope"></i></span>
-            <div class="email_content colum_content">
-              <p class="email_title">EMAIL</p>
-              <span class="full_email">mail@example.com</span>
+  <div class="blog_board">
+    <div class="block_content">
+      <div class="row">
+        <div class="col-lg-6 col-12 left_news_block">
+          <div class="card">
+            <img class="card-img-top" src="./img/5.jpg" alt="Card image cap">
+            <div class="card-body">
+              <p class="news_type">DEVELOPMANT</p>
+              <h5 class="card-title">Top 13 Software Development Metrics and KPIs in Outsourcing </h5>
+              <p class="card-text">Today, we are a rooted technology-intensive company that is proud to deliver a comprehensive suite of solutions
+                comprising of web consultancy, on/off site services, custom software and web development, software and web application testing.</p>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-2">
-        <div class="footer_item_main item1">
-          <h4 class="item_title">Account</h4>
-          <ul class="footer_navigation_block">
-            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-2">
-        <div class="footer_item_main item1">
-          <h4 class="item_title">Account</h4>
-          <ul class="footer_navigation_block">
-            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>
-            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="col-4">
-        <div class="footer_item_main item1">
-          <h4 class="item_title">NEWSLETTER</h4>
-          <div class="news_today_block">
-            <p class="news_today_content">Get all the latest information on Events,
-              Sales and Offers. Sign up for newsletter today.</p>
-            <div class="input-group mb-3">
-              <input type="text" class="form-control email_contact">
-              <div class="input-group-append">
-                <button class="btn btn-secondary" type="button"><i class="fas fa-long-arrow-alt-right"></i></button>
+        <div class="col-lg-6 col-12 right_news_block">
+          <div class="row">
+            <div class="col-12 ">
+              <div class="card">
+                <img class="card-img-top" src="./img/5.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="news_type">DEVELOPMANT</p>
+                  <h5 class="card-title">Top 13 Software Development Metrics and KPIs in Outsourcing </h5>
+                  <p class="card-text">Today, we are a rooted technology-intensive company that is proud to deliver a comprehensive suite of solutions
+                    comprising of web consultancy, on/off site services, custom software and web development, software and web application testing.</p>
+                </div>
               </div>
             </div>
-
+            <div class="col-12 last_block">
+              <div class="card">
+                <img class="card-img-top" src="./img/5.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <p class="news_type">DEVELOPMANT</p>
+                  <h5 class="card-title">Top 13 Software Development Metrics and KPIs in Outsourcing </h5>
+                  <p class="card-text">Today, we are a rooted technology-intensive company that is proud to deliver a comprehensive suite of solutions
+                    comprising of web consultancy, on/off site services, custom software and web development, software and web application testing.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
   </div>
-  <span class="footer_down_line"></span>
-  <div class="footer_down_text">
-    <p class="company_name">© brain fors. 2021. All Rights Reserved</p>
-    <div class="social_icons">
-      <span class="fb_icon"><a href="#"><i class="fab fa-facebook-f"></i></a></span>
-      <span class="insta_icon"><a href="#"><i class="fab fa-instagram"></i></a></span>
-      <span class="linkedin_icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></span>
+
+  <article class="article">
+    <div class="article_main_content">
+      <p class="main_text">
+        During those years Brain Fors team has been and continues growing,
+        being supplemented by new professionals that share the same vision with the company.
+        Today, we are a rooted technology-intensive company that is proud to deliver a comprehensive suite of solutions
+        comprising of web consultancy, on/off site services, custom software and web development, software and web application testing.
+      </p>
     </div>
-  </div>
-</footer>
+  </article>
+
+  <aside class="aside">
+    <div class="aside_content">
+      <div class="row">
+        <div class="col-lg-7 col-12">
+          <div class="aside_board">
+            <p class="board_text">
+              During those years Brain Fors team has been and continues growing,
+              being supplemented by new professionals that share the same vision with the company.
+              Today, we are a rooted technology-intensive company that is proud to deliver a comprehensive suite of
+              solutions comprising of web consultancy, on/off site services, custom software and web development,
+              software and web application testing.
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-5 col-12">
+          <img src="./img/article_photo.svg" class="aside_img" alt="Photo">
+        </div>
+      </div>
+
+    </div>
+  </aside>
+</div>
+<!--<footer class="footer">-->
+<!--  <div class="container-fluid text-left">-->
+<!--    <div class="row mb-3">-->
+<!--      <div class="col-4">-->
+<!--        <div class="footer_item_main item1">-->
+<!--          <h4 class="item_title">CONTACT INFO</h4>-->
+<!--          <div class="footer_address_block footer_colum">-->
+<!--            <span class="icon_colum"><img src="./img/addressFlag.svg" alt=""></span>-->
+<!--            <div class="address_content colum_content">-->
+<!--              <p class="address_title">ADDRESS</p>-->
+<!--              <span class="full_address">123 Street Name, City, England</span>-->
+<!--            </div>-->
+<!--          </div>-->
+
+<!--          <div class="footer_phone_block footer_colum">-->
+<!--            <span class="icon_colum"><i class="fas fa-phone-alt"></i></span>-->
+<!--            <div class="phone_content colum_content">-->
+<!--              <p class="phone_title">PHONE</p>-->
+<!--              <span class="full_number">Toll Free (123) 456-7890</span>-->
+<!--            </div>-->
+<!--          </div>-->
+
+<!--          <div class="footer_email_block footer_colum">-->
+<!--            <span class="icon_colum"><i class="far fa-envelope"></i></span>-->
+<!--            <div class="email_content colum_content">-->
+<!--              <p class="email_title">EMAIL</p>-->
+<!--              <span class="full_email">mail@example.com</span>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-2">-->
+<!--        <div class="footer_item_main item1">-->
+<!--          <h4 class="item_title">Account</h4>-->
+<!--          <ul class="footer_navigation_block">-->
+<!--            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>-->
+<!--            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>-->
+<!--            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>-->
+<!--            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>-->
+<!--          </ul>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-2">-->
+<!--        <div class="footer_item_main item1">-->
+<!--          <h4 class="item_title">Account</h4>-->
+<!--          <ul class="footer_navigation_block">-->
+<!--            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>-->
+<!--            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>-->
+<!--            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>-->
+<!--            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>-->
+<!--          </ul>-->
+<!--        </div>-->
+<!--      </div>-->
+
+<!--    </div>-->
+<!--  </div>-->
+<!--  <span class="footer_down_line"></span>-->
+<!--  <div class="footer_down_text">-->
+<!--    <p class="company_name">© brain fors. 2021. All Rights Reserved</p>-->
+<!--    <div class="social_icons">-->
+<!--      <span class="fb_icon"><a href="#"><i class="fab fa-facebook-f"></i></a></span>-->
+<!--      <span class="insta_icon"><a href="#"><i class="fab fa-instagram"></i></a></span>-->
+<!--      <span class="linkedin_icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></span>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</footer>-->
 </div>
 
 
