--- a/index.html
+++ b/index.html
@@ -18,10 +18,49 @@
 
 <body>
 <!-- navbar start  -->
-<div class="nav-fixed home_page_navbar">
+<!--<div class="nav-fixed home_page_navbar">-->
 
-  <div class="container">
-    <nav class="heder-nav">
+<!--  <div class="container">-->
+<!--    <nav class="heder-nav">-->
+
+<!--      <a href="javascript:void(0)" class="navbar-brand">-->
+<!--        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="60" viewBox="0 0 601.443 480.725">-->
+<!--          <path id="Path_1" data-name="Path 1"-->
+<!--                d="M585.008,495.172s-6.267,33.046,9.288,51.027c8.425,9.741,24.579,9.125,50.308,9.343,53.625,1.714,57.993-.85,68.551-13.766,7.187-13.268,4.809-46.6,4.809-46.6V254.414s5.584-33,22.832-50.971,46.161-20.9,46.161-20.9H995.376s39.7-2.237,39.7,42.415-39.7,40.952-39.7,40.952H831.516s-25.485,5.045-25.485,29.3c0,11.57-1.728,38.353,4.643,55.283s20.842,12.439,20.842,12.439H999.688s35.386,2.786,35.386,44.461-35.386,40.344-35.386,40.344l-168.172,3.593s-14.6,1.14-18,11.346-3.51,19.159-2.841,42.555c.487,17.029-2.37,23.965,2.841,36.542s18,13.766,18,13.766h235.009s116.588,10.061,118.3-110.677-83.088-130.081-83.088-130.081S1191.7,320.251,1184.829,193s-118.3-117.539-118.3-117.539h-357.9s-52.451-1.467-89.873,28.3-33.74,74.471-33.74,74.471Z"-->
+<!--                transform="translate(-583.76 -75.291)" fill="#000"/>-->
+<!--        </svg>-->
+<!--      </a>-->
+
+<!--      <ul class="nav-list media_hide">-->
+<!--        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Home</a></li>-->
+<!--        <li class="nav-link-item nav-link-dropdown">-->
+<!--          <a href="javascript:void(0)" class="nav-link">How We Are</a>-->
+<!--          <ul class="dropdown_links">-->
+<!--            <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>-->
+<!--            <li class="nav-link-item"><a href="about.html" class="nav-link">Meet the team</a></li>-->
+<!--          </ul>-->
+<!--          <span class="underline_link"></span>-->
+<!--        </li>-->
+<!--        <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>-->
+<!--        <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>-->
+<!--        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a></li>-->
+<!--        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link">How we work</a></li>-->
+<!--      </ul>-->
+<!--      <div class='nav-toggle'>-->
+<!--        <span></span>-->
+<!--        <span class="large_line"></span>-->
+<!--        <span class="small_line"></span>-->
+<!--      </div>-->
+<!--    </nav>-->
+<!--    <div class="min_menu_block d-none">-->
+<!--      <span class="close_menu"><i class="fas fa-times"></i></span>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<div class="nav-fixed">
+  <div class="nav-bar_container">
+    <nav class="header-nav">
 
       <a href="javascript:void(0)" class="navbar-brand">
         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="60" viewBox="0 0 601.443 480.725">
@@ -32,7 +71,7 @@
       </a>
 
       <ul class="nav-list media_hide">
-        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link active">Home</a></li>
+        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">Home</a><span class="underline_link"></span></li>
         <li class="nav-link-item nav-link-dropdown">
           <a href="javascript:void(0)" class="nav-link">How We Are</a>
           <ul class="dropdown_links">
@@ -41,10 +80,11 @@
           </ul>
           <span class="underline_link"></span>
         </li>
-        <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a></li>
-        <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a></li>
-        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a></li>
-        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link">How we work</a></li>
+        <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
+        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we work</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
+        <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -52,11 +92,12 @@
         <span class="small_line"></span>
       </div>
     </nav>
-    <div class="min_menu_block d-none">
+    <div class="min_menu_block">
       <span class="close_menu"><i class="fas fa-times"></i></span>
     </div>
   </div>
 </div>
+
 <!-- navbar end  -->
 
 <!-- home-page block start -->
@@ -277,8 +318,8 @@
 <!--<script src="./js/script_test.js"></script>-->
 <script>
     if (location.search === '?reload=false'){
-        $('.nav-list').css('left', '4000px');
-        $('.nav-toggle').css('right', '-50px');
+        // $('.nav-list').css('left', '4000px');
+        // $('.nav-toggle').css('right', '-50px');
         $('.loading-custom-animation').addClass('d-none');
         $('.home-page').addClass('d-none');
         timeNext = setTimeout(() => {
