--- a/how-we-work.html
+++ b/how-we-work.html
@@ -19,17 +19,16 @@
 </head>
 <body>
 <!-- navbar start  -->
-<div class="nav-fixed default_nav-bar">
-  <div class="container">
-    <nav class="heder-nav">
+<div class="nav-fixed">
+  <div class="nav-bar_container">
+    <nav class="header-nav">
 
       <a href="index.html?reload=false" class="navbar-brand">
         <img src="./img/logo_green.svg" alt="logo">
       </a>
 
       <ul class="nav-list media_hide">
-        <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span
-          class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span class="underline_link"></span></li>
         <li class="nav-link-item nav-link-dropdown">
           <a href="javascript:void(0)" class="nav-link">How We Are</a>
           <ul class="dropdown_links">
@@ -38,15 +37,11 @@
           </ul>
           <span class="underline_link"></span>
         </li>
-        <li class="nav-link-item"><a href="contactUs.html" class="nav-link">Contact us</a><span
-          class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="project.html" class="nav-link">Project</a><span
-          class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span
-          class="underline_link"></span></li>
-        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we work</a><span
-          class="underline_link"></span></li>
-
+        <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
+        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we work</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
+        <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
       </ul>
       <div class='nav-toggle'>
         <span></span>
@@ -54,7 +49,7 @@
         <span class="small_line"></span>
       </div>
     </nav>
-    <div class="min_menu_block d-none">
+    <div class="min_menu_block ">
       <span class="close_menu"><i class="fas fa-times"></i></span>
     </div>
   </div>
@@ -183,72 +178,72 @@
     </div>
   </div>
 </div>
-<!--<footer class="footer">-->
-<!--  <div class="container-fluid text-left">-->
-<!--    <div class="row mb-3">-->
-<!--      <div class="col-4">-->
-<!--        <div class="footer_item_main item1">-->
-<!--          <h4 class="item_title">CONTACT INFO</h4>-->
-<!--          <div class="footer_address_block footer_colum">-->
-<!--            <span class="icon_colum"><img src="./img/addressFlag.svg" alt=""></span>-->
-<!--            <div class="address_content colum_content">-->
-<!--              <p class="address_title">ADDRESS</p>-->
-<!--              <span class="full_address">123 Street Name, City, England</span>-->
-<!--            </div>-->
-<!--          </div>-->
+<footer class="footer">
+  <div class="container-fluid text-left">
+    <div class="row mb-3">
+      <div class="col-4">
+        <div class="footer_item_main item1">
+          <h4 class="item_title">CONTACT INFO</h4>
+          <div class="footer_address_block footer_colum">
+            <span class="icon_colum"><img src="./img/addressFlag.svg" alt=""></span>
+            <div class="address_content colum_content">
+              <p class="address_title">ADDRESS</p>
+              <span class="full_address">123 Street Name, City, England</span>
+            </div>
+          </div>
 
-<!--          <div class="footer_phone_block footer_colum">-->
-<!--            <span class="icon_colum"><i class="fas fa-phone-alt"></i></span>-->
-<!--            <div class="phone_content colum_content">-->
-<!--              <p class="phone_title">PHONE</p>-->
-<!--              <span class="full_number">Toll Free (123) 456-7890</span>-->
-<!--            </div>-->
-<!--          </div>-->
+          <div class="footer_phone_block footer_colum">
+            <span class="icon_colum"><i class="fas fa-phone-alt"></i></span>
+            <div class="phone_content colum_content">
+              <p class="phone_title">PHONE</p>
+              <span class="full_number">Toll Free (123) 456-7890</span>
+            </div>
+          </div>
 
-<!--          <div class="footer_email_block footer_colum">-->
-<!--            <span class="icon_colum"><i class="far fa-envelope"></i></span>-->
-<!--            <div class="email_content colum_content">-->
-<!--              <p class="email_title">EMAIL</p>-->
-<!--              <span class="full_email">mail@example.com</span>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="col-2">-->
-<!--        <div class="footer_item_main item1">-->
-<!--          <h4 class="item_title">Account</h4>-->
-<!--          <ul class="footer_navigation_block">-->
-<!--            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>-->
-<!--            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>-->
-<!--            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>-->
-<!--            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="col-2">-->
-<!--        <div class="footer_item_main item1">-->
-<!--          <h4 class="item_title">Account</h4>-->
-<!--          <ul class="footer_navigation_block">-->
-<!--            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>-->
-<!--            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>-->
-<!--            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>-->
-<!--            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--      </div>-->
+          <div class="footer_email_block footer_colum">
+            <span class="icon_colum"><i class="far fa-envelope"></i></span>
+            <div class="email_content colum_content">
+              <p class="email_title">EMAIL</p>
+              <span class="full_email">mail@example.com</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="footer_item_main item1">
+          <h4 class="item_title">Account</h4>
+          <ul class="footer_navigation_block">
+            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>
+            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>
+            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>
+            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-2">
+        <div class="footer_item_main item1">
+          <h4 class="item_title">Account</h4>
+          <ul class="footer_navigation_block">
+            <li class="footer_item"><a class="footer_link" href="#">About us</a></li>
+            <li class="footer_item"><a class="footer_link" href="#">Contact us</a></li>
+            <li class="footer_item"><a class="footer_link" href="#">My Account</a></li>
+            <li class="footer_item"><a class="footer_link" href="#">Order History</a></li>
+          </ul>
+        </div>
+      </div>
 
-<!--    </div>-->
-<!--  </div>-->
-<!--  <span class="footer_down_line"></span>-->
-<!--  <div class="footer_down_text">-->
-<!--    <p class="company_name">© brain fors. 2021. All Rights Reserved</p>-->
-<!--    <div class="social_icons">-->
-<!--      <span class="fb_icon"><a href="#"><i class="fab fa-facebook-f"></i></a></span>-->
-<!--      <span class="insta_icon"><a href="#"><i class="fab fa-instagram"></i></a></span>-->
-<!--      <span class="linkedin_icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></span>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</footer>-->
+    </div>
+  </div>
+  <span class="footer_down_line"></span>
+  <div class="footer_down_text">
+    <p class="company_name">© brain fors. 2021. All Rights Reserved</p>
+    <div class="social_icons">
+      <span class="fb_icon"><a href="#"><i class="fab fa-facebook-f"></i></a></span>
+      <span class="insta_icon"><a href="#"><i class="fab fa-instagram"></i></a></span>
+      <span class="linkedin_icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></span>
+    </div>
+  </div>
+</footer>
 
 <!--main content end-->
 <script src="./js/lib/jquery-1.11.0.min.js"></script>
