--- a/aboutUs.html
+++ b/aboutUs.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="./css/about.css">
@@ -66,10 +66,10 @@
     <div class="block_content">
       <div class="row">
         <div class="col-lg-6 col-12">
-          <img class='articel_img' src="./img/article_photo.svg" alt="img">
+          <img class='articel_img' src="./img/article_photo.svg" alt="img" data-aos="fade-down">
         </div>
         <div class="col-lg-6 col-12">
-          <p class="team_content">
+          <p class="team_content" data-aos="fade-up">
             <span class="company">Brain Fors</span> Company was founded in 2016, in Gyumri, the second largest city of
             Armenia. When the
             company was founded, there were two main goals: base the company in Gyumri, thus enabling local talented
@@ -85,10 +85,10 @@
     <div class="articel_main">
       <div class="row">
         <div class="col-md-6 col-12">
-          <img src="./img/article_photo.svg" alt="img">
+          <img src="./img/article_photo.svg" alt="img" data-aos="fade-up">
         </div>
         <div class="col-md-6 col-12">
-          <div class="article_content">
+          <div class="article_content" data-aos="fade-down">
             <h4 class="article_title">Why we</h4>
             <p class="article_text">
               We work highlighting Your need and wishes and sharing Your vision.
@@ -107,7 +107,7 @@
     <div class="block_content">
       <div class="row">
         <div class="col-lg-6 col-12 left_news_block">
-          <div class="card">
+          <div class="card" data-aos="fade-right">
             <img class="card-img-top" src="./img/5.jpg" alt="Card image cap">
             <div class="card-body">
               <p class="news_type">DEVELOPMANT</p>
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div class="col-lg-6 col-12 right_news_block">
-          <div class="row">
+          <div class="row" data-aos="fade-left">
             <div class="col-12 ">
               <div class="card">
                 <img class="card-img-top" src="./img/5.jpg" alt="Card image cap">
@@ -163,7 +163,7 @@
     <div class="aside_content">
       <div class="row">
         <div class="col-lg-7 col-12">
-          <div class="aside_board">
+          <div class="aside_board" data-aos="fade-down">
             <p class="board_text">
               During those years Brain Fors team has been and continues growing,
               being supplemented by new professionals that share the same vision with the company.
@@ -173,8 +173,8 @@
             </p>
           </div>
         </div>
-        <div class="col-lg-5 col-12">
-          <img src="./img/article_photo.svg" class="aside_img" alt="Photo">
+        <div class="col-lg-5 col-12" data-aos="fade-left">
+          <img src="./img/article_photo.svg" class="aside_img" alt="Photo" >
         </div>
       </div>
 
@@ -259,8 +259,9 @@
 </script>
 <script src="https://kit.fontawesome.com/4286680757.js" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-<script src="./js/about.js"></script>
+<script src="./js/animation.js"></script>
 <!--<script src="./js/script_test.js"></script>-->
 </body>
 
