--- a/contactUs.html
+++ b/contactUs.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/media.css">
   <link rel="stylesheet" href="./css/about.css">
@@ -92,6 +91,8 @@
 
   </div>
   <div class="location_block">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1520.4723516980612!2d43.8437612773515!3d40.79340545078145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4041fbedc819f9eb%3A0x1a98a1f57b0a2dd5!2zMyBBbGVrIE1hbnVreWFuIFN0LCBHeXVtcmksINCQ0YDQvNC10L3QuNGP!5e1!3m2!1sru!2s!4v1630587609726!5m2!1sru!2s"
+            allowfullscreen="" loading="lazy"></iframe>
     <div class="container-fluid">
       <div class="nav_tab_block">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
