--- a/how-we-work.html
+++ b/how-we-work.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/lib/owl.carousel.min.css">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/how_we_work.css">
@@ -89,10 +89,10 @@
     <div class="articel_main">
     <div class="row">
       <div class="col-md-6 col-12">
-        <img src="./img/article_photo.svg" alt="img">
+        <img data-aos="fade-up" src="./img/article_photo.svg" alt="img">
       </div>
       <div class="col-md-6 col-12">
-        <div class="article_content">
+        <div class="article_content " data-aos="fade-down">
           <h4 class="article_title">Dedicated Development team</h4>
           <p class="article_text">
             Choosing the dedicated team model of outsourcing, you hire an already formed team that integrates into existing processes of the project cycle and can stay self-managed.
@@ -116,7 +116,7 @@
     </div>
 
     <div class="intellectsoft_cards">
-        <div class="card_block">
+        <div class="card_block" data-aos="fade-down">
           <img class="first_decor decor" src="./img/image_decor.svg" alt="img">
           <div class="row">
             <div class="col-md-4 col-12">
@@ -138,7 +138,7 @@
               </div>
             </div>
           </div>
-          <img class ='second_decor decor'src="./img/image_decor.svg" alt="img">
+          <img class ='second_decor decor' src="./img/image_decor.svg" alt="img">
         </div>
     </div>
 
@@ -148,7 +148,7 @@
     <div class="custom_software_content">
       <div class="row">
         <div class="col-md-6 12">
-          <div class="text_block">
+          <div class="text_block" data-aos="fade-up">
             <h4 class="software_title">Custom Software development</h4>
             <p class="software_text">
               Are your software needs steadily piling up? We can help
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="col-md-6 12">
-          <img class="baner_img" src="./img/article_photo.svg" alt="Photo">
+          <img data-aos="fade-down" class="baner_img" src="./img/article_photo.svg" alt="Photo">
         </div>
       </div>
     </div>
@@ -255,6 +255,9 @@
 </script>
 <script src="https://kit.fontawesome.com/4286680757.js" crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="js/animation.js"></script>
 <script src="js/how_work.js"></script>
 </body>
 </html>
