--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </a>
 
       <ul class="nav-list media_hide">
-        <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">Home</a><span class="underline_link"></span></li>
+        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link">Home</a><span class="underline_link"></span></li>
         <li class="nav-link-item nav-link-dropdown">
           <a href="javascript:void(0)" class="nav-link">How We Are</a>
           <ul class="dropdown_links">
@@ -81,7 +81,7 @@
           <span class="underline_link"></span>
         </li>
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
-        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we work</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How we work</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
         <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
