--- a/aboutUs.html
+++ b/aboutUs.html
@@ -34,10 +34,10 @@
         <li class="nav-link-item nav-link-dropdown active">
           <a href="javascript:void(0)" class="nav-link">How We Are</a>
           <ul class="dropdown_links">
-            <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">About Us</a></li>
+            <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">About Us</a> <span class="underline_link"></span></li>
             <li class="nav-link-item"><a href="about.html" class="nav-link">Meet the team</a></li>
           </ul>
-          <span class="underline_link"></span>
+
         </li>
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How we work</a><span class="underline_link"></span></li>
@@ -119,7 +119,7 @@
         </div>
         <div class="col-lg-6 col-12 right_news_block">
           <div class="row" data-aos="fade-left">
-            <div class="col-12 ">
+            <div class="col-12 last_block">
               <div class="card">
                 <img class="card-img-top" src="./img/5.jpg" alt="Card image cap">
                 <div class="card-body">
@@ -130,7 +130,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 last_block">
+            <div class="col-12 ">
               <div class="card">
                 <img class="card-img-top" src="./img/5.jpg" alt="Card image cap">
                 <div class="card-body">
@@ -151,10 +151,12 @@
   <article class="article">
     <div class="article_main_content">
       <p class="main_text">
-        During those years Brain Fors team has been and continues growing,
-        being supplemented by new professionals that share the same vision with the company.
-        Today, we are a rooted technology-intensive company that is proud to deliver a comprehensive suite of solutions
-        comprising of web consultancy, on/off site services, custom software and web development, software and web application testing.
+        <span data-aos="fade-up" data-aos-duration="200">turning</span>
+        <span data-aos="fade-up" data-aos-duration="400">brainy</span>
+        <span data-aos="fade-up" data-aos-duration="600">ideas</span>
+        <span data-aos="fade-up" data-aos-duration="800">into</span>
+        <span data-aos="fade-up" data-aos-duration="1000">great</span>
+        <span data-aos="fade-up" data-aos-duration="1200">products</span>
       </p>
     </div>
   </article>
