--- a/contactUs.html
+++ b/contactUs.html
@@ -91,8 +91,7 @@
 
   </div>
   <div class="location_block">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1520.4723516980612!2d43.8437612773515!3d40.79340545078145!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4041fbedc819f9eb%3A0x1a98a1f57b0a2dd5!2zMyBBbGVrIE1hbnVreWFuIFN0LCBHeXVtcmksINCQ0YDQvNC10L3QuNGP!5e1!3m2!1sru!2s!4v1630587609726!5m2!1sru!2s"
-            allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1445.8108981958703!2d43.84482342042715!3d40.79383057437806!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4041fbedc819f9eb%3A0x1a98a1f57b0a2dd5!2s3%20Alek%20Manukyan%20St%2C%20Gyumri!5e0!3m2!1sru!2s!4v1630935080752!5m2!1sru!2s" allowfullscreen="" loading="lazy"></iframe>
     <div class="container-fluid">
       <div class="nav_tab_block">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
