--- a/portfolio.html
+++ b/portfolio.html
@@ -148,9 +148,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
@@ -264,9 +266,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
@@ -333,9 +337,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
@@ -401,9 +407,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
@@ -470,9 +478,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
@@ -537,9 +547,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
@@ -605,9 +617,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
@@ -673,9 +687,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
@@ -743,9 +759,11 @@
                         <div class="board_line">
                           <div class="row">
                             <div class="col-6">
+                              <h4 class="board_line_title">technologies</h4>
                               <p class="project_info first_text"></p>
                             </div>
                             <div class="col-6">
+                              <h4 class="board_line_title">developers</h4>
                               <p class="project_info second_text"></p>
                             </div>
                           </div>
