--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="./css/lib/OverlayScrollbars.css">
   <!--  <link rel="stylesheet" href="./css/main_test.css">-->
 
-  <title>About Staff</title>
+  <title>Meet the team</title>
 </head>
 
 <body>
@@ -34,9 +34,9 @@
           <a href="javascript:void(0)" class="nav-link">How We Are</a>
           <ul class="dropdown_links">
             <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
-            <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">Meet the team</a></li>
+            <li class="nav-link-item"><a href="javascript:void(0)" class="nav-link">Meet the team</a> <span class="underline_link"></span></li>
           </ul>
-          <span class="underline_link"></span>
+
         </li>
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
         <li class="nav-link-item "><a href="how-we-work.html" class="nav-link active">How we work</a><span class="underline_link"></span></li>
