--- a/how-we-work.html
+++ b/how-we-work.html
@@ -30,7 +30,7 @@
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span class="underline_link"></span></li>
         <li class="nav-link-item nav-link-dropdown">
-          <a href="javascript:void(0)" class="nav-link">How We Are</a>
+          <a href="javascript:void(0)" class="nav-link">How we work</a>
           <ul class="dropdown_links">
             <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
             <li class="nav-link-item"><a href="about.html" class="nav-link">Meet the team</a></li>
@@ -38,7 +38,7 @@
           <span class="underline_link"></span>
         </li>
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
-        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we work</a><span class="underline_link"></span></li>
+        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we are</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
         <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
@@ -59,7 +59,24 @@
 <!--main content start-->
 <div class="how_we_work_content">
   <div class="header_board">
-    <img src="./img/5.jpg" alt="Photo">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="./img/5.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="./img/5.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="./img/5.jpg" alt="Third slide">
+        </div>
+      </div>
+    </div>
   </div>
   <div class="container-fluid">
     <div class="success_stories_block">
