--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!--  </div>-->
 <!--</div>-->
 
-<div class="nav-fixed">
+<div class="nav-fixed background_change">
   <div class="nav-bar_container">
     <nav class="header-nav">
 
@@ -73,7 +73,7 @@
       <ul class="nav-list media_hide">
         <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link">Home</a><span class="underline_link"></span></li>
         <li class="nav-link-item nav-link-dropdown">
-          <a href="javascript:void(0)" class="nav-link">How We Are</a>
+          <a href="javascript:void(0)" class="nav-link">How we work</a>
           <ul class="dropdown_links">
             <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
             <li class="nav-link-item"><a href="about.html" class="nav-link">Meet the team</a></li>
@@ -81,7 +81,7 @@
           <span class="underline_link"></span>
         </li>
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
-        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How we work</a><span class="underline_link"></span></li>
+        <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How We Are</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
         <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
@@ -322,6 +322,8 @@
         // $('.nav-toggle').css('right', '-50px');
         $('.loading-custom-animation').addClass('d-none');
         $('.home-page').addClass('d-none');
+        $('.nav-list').css('display', 'none');
+        $('.nav-toggle').css('display', 'block');
         timeNext = setTimeout(() => {
             $('.loader').addClass('d-none');
             $('.ball').css('z-index', '0');
