--- a/how-we-work.html
+++ b/how-we-work.html
@@ -30,7 +30,7 @@
       <ul class="nav-list media_hide">
         <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span class="underline_link"></span></li>
         <li class="nav-link-item nav-link-dropdown">
-          <a href="javascript:void(0)" class="nav-link">How we work</a>
+          <a href="javascript:void(0)" class="nav-link">who we are</a>
           <ul class="dropdown_links">
             <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
             <li class="nav-link-item"><a href="about.html" class="nav-link">Meet the team</a></li>
@@ -38,7 +38,7 @@
           <span class="underline_link"></span>
         </li>
         <li class="nav-link-item"><a href="what-we-do.html" class="nav-link">What we do</a><span class="underline_link"></span></li>
-        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we are</a><span class="underline_link"></span></li>
+        <li class="nav-link-item active"><a href="javascript:void(0)" class="nav-link active">How we work</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="portfolio.html" class="nav-link">portfolio</a><span class="underline_link"></span></li>
         <li class="nav-link-item"><a href="project.html" class="nav-link">Careers</a><span class="underline_link"></span></li>
         <li class="nav-link-item "><a href="contactUs.html" class="nav-link">Contact us</a><span class="underline_link"></span></li>
@@ -191,7 +191,7 @@
           Europe to ensure your team is staffed with top qualified engineers.</p>
       </div>
       <img src="./img/map_img.svg" alt="Map">
-      <a href="javascript:void(0)" class="btn btn-go-project">Got a project for us ? <i class="fas fa-chevron-right"></i></a>
+      <a href="contactUs.html" target="_blank" class="btn btn-go-project">Got a project for us ? <i class="fas fa-chevron-right"></i></a>
     </div>
   </div>
 </div>
