--- a/what-we-do.html
+++ b/what-we-do.html
@@ -30,7 +30,7 @@
                 <li class="nav-link-item"><a href="index.html?reload=false" class="nav-link">Home</a><span
                         class="underline_link"></span></li>
                 <li class="nav-link-item nav-link-dropdown">
-                    <a href="javascript:void(0)" class="nav-link">How we work</a>
+                    <a href="javascript:void(0)" class="nav-link">who we are</a>
                     <ul class="dropdown_links">
                         <li class="nav-link-item"><a href="aboutUs.html" class="nav-link">About Us</a></li>
                         <li class="nav-link-item"><a href="about.html" class="nav-link">Meet the team</a></li>
@@ -39,7 +39,7 @@
                 </li>
                 <li class="nav-link-item active"><a href="what-we-do.html" class="nav-link">What we do</a><span
                         class="underline_link"></span></li>
-                <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How We Are</a><span
+                <li class="nav-link-item"><a href="how-we-work.html" class="nav-link active">How we work</a><span
                         class="underline_link"></span></li>
                 <li class="nav-link-item "><a href="portfolio.html" class="nav-link">portfolio</a><span
                         class="underline_link"></span></li>
